[package]
name = "polms_image"
version = "0.1.0"
authors = ["Robin Moalic <robin.moalic@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
crc32fast = "1.3.0"
miniz_oxide = "0.5.1"
log = "0.4.0"
env_logger = "0.9.0"
bitstream-rs = "0.2.0"
